# phone-finder-pro

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_marketplace_expansion.py
app/: api_main.py  main.py
app/application/commands/: __init__.py
app/application/dto/: __init__.py
app/application/handlers/: __init__.py
app/application/queries/: __init__.py
app/application/services/: admin_phone.py  analytics.py  compare.py  phone_import_export.py
app/application/validators/: __init__.py
app/core/config/: settings.py
app/core/database/: __init__.py  session.py  unit_of_work.py
app/core/logging/: __init__.py  setup.py
app/core/security/: __init__.py  access.py  rate_limiter.py
app/core/utils/: __init__.py  formatting.py
app/domain/entities/: brand.py  category.py  phone.py  recommendation.py  user.py
app/domain/repositories/: __init__.py
app/domain/services/: recommendation_engine.py
app/domain/value_objects/: __init__.py
app/infrastructure/postgres/: mappers.py  models.py
app/infrastructure/redis/: client.py
app/infrastructure/repositories/: brand_repository.py  category_repository.py  favorite_repository.py  phone_repository.py  recommendation_repository.py  user_repository.py
app/presentation/api/: app.py
app/presentation/bot/: __init__.py
app/presentation/bot/filters/: __init__.py
app/presentation/bot/keyboards/: __init__.py
app/presentation/bot/middlewares/: __init__.py
app/presentation/bot/routers/: __init__.py  admin.py  catalog.py  compare.py  errors.py  recommendation.py  search.py  start.py
app/shared/constants/: __init__.py
app/shared/enums/: __init__.py  phone_enums.py
app/shared/exceptions/: __init__.py
scripts/: seed.py  seed_data.py
tests/: conftest.py
tests/integration/: test_admin_phone.py
tests/unit/: test_api.py  test_compare.py  test_formatting.py  test_import_export.py  test_recommendation_engine.py  test_search_filters.py  test_validators.py
(+2 files in other folders)
