[tool.poetry]
name = "phone-recommendation-bot"
version = "1.0.0"
description = "Production-ready Telegram bot for smartphone recommendations"
authors = ["Phone Recommendation Team <team@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.15.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
redis = { extras = ["hiredis"], version = "^5.2.0" }
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
structlog = "^24.4.0"
python-dotenv = "^1.0.1"
orjson = "^3.10.0"
httpx = "^0.28.0"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-multipart = "^0.0.17"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
aiosqlite = "^0.20.0"

[tool.poetry.scripts]
bot = "app.main:run"
api = "app.api_main:run_api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
packages = ["app"]
exclude = ["alembic", "tests"]

[[tool.mypy.overrides]]
module = ["aiogram.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
